SERVER-71416 ShardsvrDropDatabaseParticipantCommand instance is accidentally called sharsvrdDropCollectionParticipantCommand