src/mongo/db/s/shardsvr_drop_collection_participant_command.cpp
@@ -127,7 +127,7 @@ public:
                                                            ActionType::internal));
         }
     };
-} sharsvrdDropCollectionParticipantCommand;
+} shardsvrDropCollectionParticipantCommand;
 
 }  // namespace
 }  // namespace mongo
