src/mongo/db/s/shardsvr_drop_database_participant_command.cpp
@@ -103,7 +103,7 @@ public:
                                                            ActionType::internal));
         }
     };
-} sharsvrdDropCollectionParticipantCommand;
+} shardsvrDropDatabaseParticipantCommand;
 
 }  // namespace
 }  // namespace mongo
